objects/Product_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Product line items</relationshipLabel>
        <relationshipName>Product_line_items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Master_Product_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Product Line Item</label>
        <referenceTo>Product_Line_Item__c</referenceTo>
        <relationshipLabel>Product line items</relationshipLabel>
        <relationshipName>Product_line_items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(Product__r.Family)</formula>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product line items</relationshipLabel>
        <relationshipName>Product_line_items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Product Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product line items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>